[package]
name = "grrs"
version = "0.1.0"
authors = ["chaz-kiker <chaz-kiker@lambdastudents.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.3"
